--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>xd</p>
+    <p>This is literally the most useless website ever made, why are you here?</p>
 </body>
 </html>
